--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,4 +1,6 @@
 PORT = 3000
-MONGO_URI=mongodb+srv://nicky123:atul123@cluster0.obaan.mongodb.net/todoapp?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://jasontyler921110:QdO8UO1gdfp8BwGi@jason.6gpybb2.mongodb.net/patient-health?retryWrites=true&w=majority&appName=jason
 GOOGLE_CLIENT_ID = 954351893574-n56tpt1v9ghsrscp9a9b25clctcqncb4.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 1iTCJqkfqhYpR1MSRe_n9zu0
+
+
